# Startup-Profitability-and-Break-Even-Analysis-Simulator-Using-Python

./: .gitignore  .pre-commit-config.yaml  API.md  APPLY_PATCH.md  COMPLETION_SUMMARY.md  CONSTRUCTION.md  DOCKER.md  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yml  from_config_projection.csv  persona_consulting.html  persona_ecommerce.html  persona_freemium.html  persona_hardware.html  persona_marketplace.html  persona_saas.html  persona_urls.txt  requirements-dev.txt  requirements.txt  run_demo.ps1  sample_config.json  setup.cfg  test_cohort_final.html  test_debug.py  test_endpoints.py  test_home.html  test_home_after_patch.html  test_home_with_preview.html  test_index.html  test_scenarios_final.html  test_sensitivity_final.html  test_simulate_post.html  test_simulator_final.html
.github/workflows/: ci.yml  publish-on-release.yml
scenarios/: test_scenario.json
scripts/: fetch_personas.py
src/: __init__.py  api.py  main.py  plot.py  run_from_config.py  scenarios.py  simulator.py  test_scen_gen.py  test_scenarios.py  webapp.py
src/static/: home.js  manifest.json  service-worker.js  style.css
startup_simulator/: __init__.py  cli.py
tests/: __init__.py  test_api.py  test_simulator.py  test_webapp.py
