[metadata]
name = startup-profitability-simulator
version = 0.1.0
author = Programmerstephen1
description = Startup Profitability & Break-Even Analysis Simulator

[options]
packages = find:
include_package_data = True
install_requires =
    matplotlib>=3.0
    flask>=2.0

[options.entry_points]
console_scripts =
    startup-sim = startup_simulator.cli:main
